fix image view dont stretch image but keep ratio

--- a/src/resources/sass/omen/imageViewer.scss
+++ b/src/resources/sass/omen/imageViewer.scss
@@ -31,6 +31,7 @@
 
     & .modal-body {
         position: relative;
+        text-align: center;
 
         // Errorm Message
         & > h4 {
@@ -46,7 +47,6 @@
         // Content image
         & > img {
             max-width: 100%;
-            width: 100%;
             position: relative;
             top: -15em;
             height: auto;
@@ -65,6 +65,7 @@
                 position: absolute;
                 height: 15em;
                 width: 100%;
+                left: 0;
                 background-position: center;
                 background-repeat: no-repeat;
 
